# Banking-assistant-Agent

./: AGENTS.md  CUSTOMIZATION.md  README.md
.github/skills/create-update-new-agent/: Skill.md
.github/skills/local-dev/: Skill.md
.github/skills/local-dev/assets/: test_request.json
app/backend/: .env.dev.example  README.md  pyproject.toml
app/backend/app/: logging-default.yaml  main_chatkit_server.py
app/backend/app/agents/azure_chat/: account_agent.py  handoff_orchestrator.py  payment_agent.py  transaction_agent.py
app/backend/app/agents/azure_chat/simple/: account_agent.py  handoff_orchestrator.py  payment_agent.py  transaction_agent.py
app/backend/app/agents/foundry_v2/: account_agent.py  handoff_orchestrator.py  payment_agent.py  transaction_agent.py
app/backend/app/common/: user_profile_provider.py
app/backend/app/config/: container_azure_chat.py  container_foundry_v2.py  settings.py
app/backend/app/helpers/: no_history_provider.py  user_profile_helper.py  user_profile_provider.py
app/backend/app/routers/chatkit/: _chatkit_events_handler.py  attachment_handler.py  attachment_routers.py  chat_routers.py  chatkit_customization.py  chatkit_server.py  cosmosdb_store.py
app/backend/app/tools/: document_intelligence_scanner.py
app/backend/tests/: conftest.py  test_chatkit_multi_turn.py  test_chatkit_new_thread.py  test_chatkit_payment.py  test_chatkit_payment_with_image.py  test_chatkit_router.py  test_chatkit_thread_list.py
app/frontend/banking-web/src/components/chat/: apiClient.ts  types.ts
docs/: chat-server-protocol.md  deployment-guide.md
docs/foundry-template/: spec.yaml
infra/: main.bicep  main.parameters.json
infra/shared/security/: cosmosdb-role.bicep
infra/shared/storage/: cosmosdb.bicep
